test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-borrowed.chpl
//  lhs: shared!  rhs: borrowed?  errors: nlb, mm

class MyClass {
  var x: int;
}

var rhs: borrowed MyClass?;

var lhs: shared MyClass = rhs;

compilerError("done");
